Flickering Sticky and Progress bar animation issue on mobile detected

--- a/css/style.css
+++ b/css/style.css
@@ -894,7 +894,8 @@ button:active .moon {
     white-space: normal; /* Prevent long words from causing overflow */
     padding: 0 10px; /* Add padding to avoid touching screen edges */
     box-sizing: border-box; /* Include padding in width calculation */
-    margin: 14rem auto 2rem; /* top left-right bottom*/
+    /* margin: 14rem auto 2rem; */
+    margin: 7rem auto 2rem; /* top left-right bottom*/
 
     /* Add background image */
     /* display: flex;
